--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body>
     <div class="screen">
         <div class="leftside">
-            <img src="images/financial_data.png" alt="">
+            <img src="images/financial_data.png">
         </div>
         <div class="rightside">
             <h1>Crie uma conta</h1>
 
-            <form action="" method="post" class="b7validator">
-                <label for="">
+            <form action="cadastro.php" method="post" class="b7validator">
+                <label>
                     Seu nome:<br/>
-                    <input type="text" name="name" id="" data-rules="required">
+                    <input type="text" name="name" data-rules="required|min=2">
                 </label>
-                <label for="">
+                <label>
                     Seu e-mail:<br/>
-                    <input type="text" name="email" id="">
+                    <input type="text" name="email" data-rules="required|email">
                 </label>
-                <label for="">
+                <label>
                     Sua senha:<br/>
-                    <input type="text" name="password" id="">
+                    <input type="text" name="password" data-rules="required|min=4">
                 </label>
-                <label for="">
+                <label>
                     <input type="submit" value="Cadastrar">
                 </label>
             </form>
